--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
 athena
+<html>
+  <head>
+  </head>
+  
+  <body>
+    <h1> I am the heading</h1>
+    <h2> I am a sub-heading</h2>
+      <p> here is the body of document</p>
+  </body>
+</html>
