--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 athena
 <html>
   <head>
+    <title>my page/title>
   </head>
   
   <body>
     <h1> I am the heading</h1>
     <h2> I am a sub-heading</h2>
+    <image Src="aaa.jpeg">
       <p> here is the body of document</p>
   </body>
 </html>
