--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ athena
   <body>
     <h1> I am the heading</h1>
     <h2> I am a sub-heading</h2>
-    <image Src="aaa.jpeg">
+    <image src="aaa.jpeg">
       <p> here is the body of document</p>
   </body>
 </html>
